--- a/components/organisms/chatUsersList/chatUsersList.module.scss
+++ b/components/organisms/chatUsersList/chatUsersList.module.scss
@@ -1,22 +1,20 @@
 @use '/styles/common';
 
-.container {
+
+.list {
+    list-style: none;
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
     flex-direction: column;
-    gap: 1.5rem;
-    background-color: var(--bg-primary);
-    overflow-y: auto;
-    padding: 1rem 1rem;
-    padding-bottom: 3rem;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
+    gap: 1rem;
+}
+
+.avatar {
+    width: 3.5rem;
+    height: 3.5rem;
 
     @include common.mediaquery('desktop') {
-        padding: 2rem 4rem;
-        gap: 3rem;
+        width: 4rem;
+        height: 4rem;
     }
 }
 
@@ -48,37 +46,6 @@
     }
 }
 
-.list {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.heading {
-    font-size: 1.5rem;
-    text-align: center;
-
-    @include common.mediaquery('desktop') {
-        text-align: left;
-        font-size: 2.5rem;
-    }
-}
-
-.avatar {
-    width: 3.5rem;
-    height: 3.5rem;
-
-    @include common.mediaquery('desktop') {
-        width: 4rem;
-        height: 4rem;
-    }
-}
-
-.linkActive {
-    order: -1;
-    box-shadow: var(--shadow-focus);
-}
 
 .name {
     display: flex;
@@ -103,4 +70,11 @@
     @include common.mediaquery('desktop') {
         max-width: unset;
     }
+}
+
+.loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
