--- a/components/pages/chat/chat.module.scss
+++ b/components/pages/chat/chat.module.scss
@@ -1,165 +1,40 @@
 @use '/styles/common';
 
-.chat {
+.container {
     display: flex;
-    flex-direction: column;
-    position: relative;
-    max-height: 100vh;
-    padding-bottom: 3rem;
-
-    --width: 100%;
-
-    @include common.mediaquery('desktop') {
-        --width: calc(100% - 5vw - var(--header-width));
-        padding-bottom: 0;
-    }
-}
-
-.header {
-    display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
+    flex-direction: column;
     gap: 1.5rem;
-    padding: 1rem;
     background-color: var(--bg-primary);
-    width: var(--width);
-    position: fixed;
-    top: 0;
-    border-bottom: var(--border-gray);
+    overflow-y: auto;
+    padding: 1rem 1rem;
+    padding-bottom: 3rem;
     z-index: 1;
+    width: 100%;
+    height: 100%;
 
     @include common.mediaquery('desktop') {
-        padding: 1rem 3rem;
+        padding: 2rem 4rem;
+        padding-left: 9rem;
+        gap: 3rem;
     }
 }
 
-.goBack {
-    display: none;
+.nav {
+    width: 100%;
 
-    @include common.mediaquery('tablet') {
-        display: initial;
+    @include common.mediaquery('desktop') {
+        max-width: 40%;
     }
 }
 
 .heading {
-    font-size: 1rem;
-    max-width: 10rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-    @include common.mediaquery('tablet') {
-        max-width: unset;
-    }
-}
-
-.userHeader {
-    display: flex;
-    gap: 0.5rem;
-    justify-content: center;
-    align-items: center;
-}
-
-.messages {
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: flex-start;
-    justify-content: flex-start;
-    list-style: none;
-    padding: 10rem 0.5rem;
-    gap: 2rem;
+    font-size: 1.5rem;
+    text-align: center;
 
     @include common.mediaquery('desktop') {
-        padding: 10rem 2rem;
+        text-align: left;
+        font-size: 2.5rem;
     }
-}
-
-.loading {
-    margin-bottom: 10rem;
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: var(--color-primary);
-
-    >svg {
-        width: 5rem;
-        height: 5rem;
-    }
-
-    animation: rotate 1s infinite linear forwards;
-}
-
-@keyframes rotate {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-.formContainer {
-    position: fixed;
-    bottom: 2.5rem;
-    width: 100%;
-    padding: 1rem 1rem;
-    background-color: var(--bg-primary);
-    display: flex;
-    justify-content: stretch;
-    align-items: stretch;
-
-    @include common.mediaquery('desktop') {
-        width: var(--width);
-        padding: 1rem 2rem;
-        bottom: 0;
-    }
-}
-
-.form {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: var(--radius-big);
-    padding: 0 1rem;
-    background-color: var(--bg-secondary);
-    border: none;
-    width: 100%;
-
-    @include common.mediaquery('desktop') {
-        gap: 2rem;
-    }
-}
-
-.input {
-    background-color: transparent;
-    padding: 0.7rem 0.5rem;
-    border: none;
-    flex-grow: 1;
-    max-width: 80%;
-
-    @include common.mediaquery('tablet') {
-        max-width: unset;
-        padding: 1rem 0.5rem;
-    }
-}
-
-.button {
-    color: var(--text-black);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-    transition: opacity var(--transition);
-
-    &:focus {
-        outline: none;
-        box-shadow: var(--shadow-focus);
-    }
-
-    &:disabled {
-        opacity: 0.4;
-    }
-
 }
