--- a/components/atoms/loader/loader.module.scss
+++ b/components/atoms/loader/loader.module.scss
@@ -1,3 +1,5 @@
+@use '/styles/common';
+
 .loading {
     margin-bottom: 10rem;
     position: relative;
@@ -22,5 +24,14 @@
 
     100% {
         transform: rotate(360deg);
+    }
+}
+
+
+.margin-top {
+    margin-top: 3rem;
+
+    @include common.mediaquery('desktop') {
+        margin-top: 6rem;
     }
 }
