--- a/components/molecules/imagesPreview/imagesPreview.module.scss
+++ b/components/molecules/imagesPreview/imagesPreview.module.scss
@@ -4,11 +4,11 @@
   display: grid;
   place-content: center;
   grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
+  gap: 3rem;
   margin-top: 1rem;
 
   @include common.mediaquery('desktop') {
-    gap: 3rem;
+    gap: 8rem;
   }
 }
 
@@ -49,7 +49,6 @@
   align-items: center;
   min-height: 5rem;
 
-
   >svg {
     width: 2rem;
     height: 2rem;
@@ -66,7 +65,6 @@
   top: -1rem;
   background-color: var(--color-secondary);
   border-radius: 100%;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -81,6 +79,7 @@
   }
 
   >svg {
+    color: rgb(20, 20, 20);
     width: 2rem;
     height: 2rem;
   }
