--- a/components/molecules/modal/modal.module.scss
+++ b/components/molecules/modal/modal.module.scss
@@ -40,6 +40,7 @@
   padding: 0.25rem;
   border-radius: 100%;
   transition: all var(--transition-fast);
+  transition-property: background-color, box-shadow, color;
 
   &:hover,
   &:focus {
