--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -18,7 +18,7 @@
 
   --bg-primary: rgb(255, 255, 255);
   --bg-blur: rgb(255, 255, 255, 0.8);
-  --bg-error: rgb(190, 40, 40, 0.3);
+  --bg-error: rgba(204, 73, 73, 0.25);
   --bg-secondary: rgb(235, 235, 235);
 
   --transition: 0.4s ease;
