--- a/components/molecules/aspectRatioButtons/aspectRatioButtons.module.scss
+++ b/components/molecules/aspectRatioButtons/aspectRatioButtons.module.scss
@@ -18,8 +18,11 @@
 .button {
   width: 100%;
   text-transform: capitalize;
-  font-size: 1.25rem;
-  padding: 0.75rem 0;
+
+  @include common.mediaquery('desktop') {
+    font-size: 1.25rem;
+    padding: 0.75rem 0;
+  }
 }
 
 .container {
