--- a/components/organisms/accountPosts/accountPosts.module.scss
+++ b/components/organisms/accountPosts/accountPosts.module.scss
@@ -8,6 +8,12 @@
   padding: 0 1rem;
   grid-template-columns: repeat(2, 1fr);
 
+  @include common.mobile-landscape {
+    padding: 0 4rem;
+    gap: 2rem;
+    margin-top: 3rem;
+  }
+
   @include common.mediaquery('tablet') {
     margin-top: 3rem;
     gap: 0.75rem;
