--- a/components/organisms/postModal/postModal.module.scss
+++ b/components/organisms/postModal/postModal.module.scss
@@ -11,14 +11,14 @@
   top: 0;
   overflow-y: scroll;
   border-radius: var(--radius-small) var(--radius-small) 0 0;
-  max-height: 72vh;
+  height: 70vh;
 
   @include common.mobile-landscape {
     width: auto;
     display: grid;
-    overflow-y: scroll;
-    grid-template-columns: 15rem 17rem;
-    grid-template-rows: auto auto auto 1fr;
+    height: 20rem;
+    grid-template-columns: 42vw 17rem;
+    grid-template-rows: auto auto 1fr;
     border-radius: var(--radius-small);
   }
 
@@ -27,16 +27,16 @@
     overflow-y: unset;
     margin: auto;
     display: grid;
-    max-height: 27rem;
-    grid-template-columns: 27rem 18rem;
+    height: 60vh;
+    grid-template-columns: 42vw 20rem;
     grid-template-rows: auto auto 1fr;
     border-radius: var(--radius-medium);
   }
 
-
   @include common.mediaquery('desktop') {
-    max-height: 45rem;
-    grid-template-columns: 45rem 30rem;
+    max-height: unset;
+    height: 70vh;
+    grid-template-columns: 42vw 30rem;
   }
 }
 
@@ -57,36 +57,23 @@
   @include common.mobile-landscape {
     grid-column: 2 / 3;
     margin-top: 0;
-    height: 3rem;
+    max-height: 10rem;
   }
 
-  @include common.mediaquery('desktop') {
+  @include common.mediaquery('tablet') {
+    max-height: 32vh;
     grid-column: 2 / 3;
   }
 }
 
 .commentsList {
-  height: auto;
-  overflow-y: scroll;
   display: flex;
-  overflow-y: auto;
   flex-direction: column;
+  overflow-y: auto;
+  max-height: 100%;
 
   @include common.mobile-landscape {
-    grid-column: 2 / 3;
-    height: 5em;
-  }
-
-  @include common.mediaquery('tablet') {
-    max-height: 20rem;
-  }
-
-
-  @include common.mediaquery('desktop') {
-    grid-column: 2 / 3;
-    height: 100%;
-    margin-top: 1rem;
-    max-height: 30rem;
+    overflow-y: unset;
   }
 }
 
@@ -96,7 +83,6 @@
   display: flex;
   align-items: center;
   width: 100%;
-
 
   @include common.mediaquery('desktop') {
     height: 100%;
@@ -108,21 +94,15 @@
   z-index: 2;
   height: 100%;
   object-fit: contain;
-  width: 23rem;
-  max-height: 23rem;
+  --img-width: 23rem;
+  width: var(--img-width);
+  height: var(--img-width);
 
   @include common.mobile-landscape {
-    width: 15rem;
-    max-height: 15rem;
+    --img-width: 42vw;
   }
 
   @include common.mediaquery('tablet') {
-    width: 27rem;
-    max-height: 27rem;
-  }
-
-  @include common.mediaquery('desktop') {
-    width: 45rem;
-    max-height: 45rem;
+    --img-width: 42vw;
   }
 }
