--- a/components/pages/createPost/createPost.module.scss
+++ b/components/pages/createPost/createPost.module.scss
@@ -6,6 +6,10 @@
   margin: 2rem auto;
   margin-bottom: 4rem;
   gap: 2rem;
+
+  @include common.mediaquery('desktop') {
+    gap: 4rem;
+  }
 }
 
 .addPhoto {
