--- a/components/atoms/textWithLoader/textWithLoader.module.scss
+++ b/components/atoms/textWithLoader/textWithLoader.module.scss
@@ -2,10 +2,14 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
+  gap: 2rem;
   margin-top: 3rem;
 
   >h2 {
     text-align: center;
   }
+}
+
+.text {
+  font-size: 2rem;
 }
