--- a/components/organisms/editAccountStages/stages.module.scss
+++ b/components/organisms/editAccountStages/stages.module.scss
@@ -5,6 +5,36 @@
     gap: 2rem;
 }
 
+.preview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.previewImg {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1;
+    border-radius: var(--radius-small);
+
+    @include common.mediaquery('tablet') {
+        width: 70%;
+    }
+}
+
+.previewFigcaption {
+    font-size: 1.25rem;
+    font-weight: 600;
+    text-align: left;
+    width: 100%;
+
+    &::first-letter {
+        text-transform: uppercase;
+    }
+}
+
 .avatarButtons {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
@@ -23,20 +53,25 @@
 .stageContainer {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
+
+    @include common.mediaquery('desktop') {
+        gap: 4rem;
+    }
 }
 
 .buttons {
     display: grid;
-    gap: 2rem;
+    margin-top: 2rem;
+    gap: 1rem;
 
     @include common.mediaquery('desktop') {
-        gap: 0;
-        display: flex;
-        justify-content: space-between;
+        gap: 4rem;
+        margin-top: 0;
+        grid-template-rows: 1fr;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
-
 
 .buttonsLastStage {
     display: flex;
