fix: laggy transiion

--- a/components/molecules/post/postSlider/postSlider.module.scss
+++ b/components/molecules/post/postSlider/postSlider.module.scss
@@ -43,6 +43,7 @@
   flex-shrink: 0;
   pointer-events: none;
   width: var(--post-width);
+  user-select: none;
 
   @include common.mediaquery('tablet') {
     max-height: 37rem;
