--- a/components/atoms/loader/loader.module.scss
+++ b/components/atoms/loader/loader.module.scss
@@ -34,3 +34,18 @@
         margin-top: 6rem;
     }
 }
+
+.small {
+    >svg {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
+}
+
+.white {
+    color: rgb(255, 255, 255);
+}
+
+.blue {
+    color: var(--color-primary);
+}
