--- a/components/molecules/post/postHeader/postHeader.module.scss
+++ b/components/molecules/post/postHeader/postHeader.module.scss
@@ -2,18 +2,22 @@
 
 .header {
     display: flex;
-    padding: 0.5rem 1rem;
-    border-bottom: var(--border-gray);
+    padding: 1rem 0.5rem;
 
     @include common.mediaquery('desktop') {
-        padding: 1rem 2rem;
+        padding: 1rem 1rem;
     }
+}
+
+.avatar {
+    width: 2.5rem;
+    height: 2.5rem;
 }
 
 .userAnchor {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.75rem;
     font-size: 0.8rem;
 }
 
@@ -26,6 +30,7 @@
         max-width: 10rem;
     }
 }
+
 
 .options {
     margin-left: auto;
