--- a/components/organisms/header/header.module.scss
+++ b/components/organisms/header/header.module.scss
@@ -8,8 +8,7 @@
     padding: 2rem 1rem;
     margin-left: 5vw;
     width: var(--header-width);
-    border-right: 1px solid var(--color-gray);
-
+    border-right: var(--border-gray);
     position: fixed;
     top: 0;
     left: 0;
