--- a/components/pages/home/home.module.scss
+++ b/components/pages/home/home.module.scss
@@ -14,7 +14,7 @@
   display: grid;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
+  gap: 2rem;
   margin-top: 2rem;
   margin-bottom: 4rem;
   min-height: 100%;
@@ -48,7 +48,7 @@
     gap: 2rem;
     gap: 2rem;
 
-    border-left: 1px solid var(--color-gray);
+    border-left: var(--border-gray);
   }
 }
 
