--- a/components/atoms/postPlaceholder/postPlaceholder.module.scss
+++ b/components/atoms/postPlaceholder/postPlaceholder.module.scss
@@ -1,15 +1,23 @@
 @use '/styles/common.scss';
 
-.placeholder {
-  width: var(--post-width);
-  height: 30rem;
-  border-radius: var(--radius-small);
-  opacity: 0.5;
+
+%gradient {
   background-size: var(--placeholder-bg-size);
   background-image: var(--gradient);
   animation: var(--placeholder-animation);
+}
+
+
+.placeholder {
+  width: var(--post-width);
+  height: 25rem;
+  border-radius: var(--radius-small);
+  opacity: 0.5;
   margin: 0 auto;
   margin-bottom: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 
   @include common.mediaquery('tablet') {
     height: 35rem;
@@ -17,21 +25,42 @@
 
   @include common.mediaquery('desktop') {
     border-radius: var(--radius-big);
-    height: 45rem;
+    height: 40rem;
   }
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  gap: 1.25rem;
+}
 
+.avatar {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 100%;
 
-.small {
-  height: 12rem;
-  margin: 0;
+  @extend %gradient;
+}
 
-  @include common.mediaquery('tablet') {
-    height: 20rem;
-  }
+.username {
+  width: 8rem;
+  height: 3rem;
+  border-radius: var(--radius-medium);
 
-  @include common.mediaquery('desktop') {
-    height: 15rem;
-  }
+  @extend %gradient;
+}
+
+.image {
+  height: 60%;
+
+  border-radius: var(--radius-medium);
+  @extend %gradient;
+}
+
+.footer {
+  height: calc(40% - 3rem);
+
+  border-radius: var(--radius-medium);
+  @extend %gradient;
 }
