--- a/components/pages/signIn/signIn.module.scss
+++ b/components/pages/signIn/signIn.module.scss
@@ -3,16 +3,31 @@
 .container {
   width: clamp(18rem, 40vw, 70rem);
   margin: 2rem auto;
-  margin-bottom: 4rem;
+  padding-bottom: 6rem;
   display: flex;
   flex-direction: column;
   gap: 3rem;
 
   @include common.mediaquery('desktop') {
-    gap: 5rem;
+    gap: 4rem;
     margin-top: 5rem;
   }
 
+}
+
+.info {
+  background-color: var(--bg-secondary);
+  padding: 1rem 1.5rem;
+  border-radius: var(--radius-big);
+  line-height: 2;
+
+  @include common.mediaquery('desktop') {
+    padding: 2rem;
+  }
+}
+
+.list {
+  list-style-position: inside;
 }
 
 .form {
@@ -42,37 +57,57 @@
   font-size: 1.25rem;
 }
 
-
-.separator {
-  height: 2px;
-  background-color: var(--bg-secondary);
-  margin-top: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .orWith {
   background-color: var(--bg-primary);
   text-transform: uppercase;
   padding: 0 1rem;
-  position: relative;
-  top: -0.25rem;
   display: inline-block;
+  z-index: 1;
+  font-weight: 600;
 }
+
+.separator {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &::before {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: var(--bg-secondary);
+    position: absolute;
+    top: 50%;
+    left: 0;
+  }
+}
+
+.otherOptions {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
+
+
 
 .other {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   flex-direction: column;
+  gap: 2rem;
+
+  @include common.mediaquery('desktop') {
+    flex-direction: row;
+  }
 }
 
 .otherButton {
   display: flex;
   align-items: center;
-  width: 50%;
   padding: 0.75rem 0;
+  flex-grow: 1;
 
   >svg {
     stroke-width: 3;
@@ -81,7 +116,7 @@
   }
 }
 
-.googleIcon {
+.otherButtonText {
   font-weight: 600;
   margin-left: 0.5rem;
 }
