--- a/components/atoms/buttons/signInButton/signInButton.module.scss
+++ b/components/atoms/buttons/signInButton/signInButton.module.scss
@@ -5,10 +5,15 @@
   padding: 0.4rem 0.8rem;
   background-color: var(--color-primary);
   color: rgb(255, 255, 255);
-  font-weight: 500;
+  font-weight: 600;
   border: none;
   transition: box-shadow var(--transition);
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  gap: 0.5rem;
   font-size: 1rem;
   margin-left: 1.5rem;
 
@@ -26,8 +31,6 @@
     margin-left: 0.75rem;
     margin-top: 1.5rem;
     font-size: 1.5rem;
-    display: block;
-    width: fit-content;
     border-radius: var(--radius-medium);
   }
 
