--- a/components/molecules/confirmationAlert/confirmationAlert.module.scss
+++ b/components/molecules/confirmationAlert/confirmationAlert.module.scss
@@ -4,11 +4,10 @@
   background-color: var(--bg-primary);
   border-radius: var(--radius-medium);
   position: relative;
-  padding: 3rem 1rem;
+  padding: 1.25rem 2rem;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
-  width: 85%;
+  gap: 2rem;
 
   @include common.mediaquery('tablet') {
     width: 60%;
@@ -17,7 +16,7 @@
   @include common.mediaquery('desktop') {
     width: auto;
     gap: 3rem;
-    padding: 2.5rem 5rem;
+    padding: 1.5rem 3rem;
   }
 }
 
@@ -26,12 +25,20 @@
 }
 
 .heading {
-  font-size: 2rem;
   text-align: center;
+  font-size: 2rem;
+
+  @include common.mediaquery('desktop') {
+    font-size: 3rem;
+  }
 }
 
 .buttonsRow {
   display: flex;
   gap: 3rem;
   justify-content: center;
+
+  @include common.mediaquery('desktop') {
+    font-size: 1.5rem;
+  }
 }
