--- a/components/organisms/statsModal/statsModal.module.scss
+++ b/components/organisms/statsModal/statsModal.module.scss
@@ -5,12 +5,23 @@
     background-color: var(--bg-primary);
     padding: 1rem 0;
     width: clamp(25rem, 30%, 30rem);
-    border-radius: var(--radius-medium);
+    border-radius: var(--radius-big) var(--radius-big) 0 0;
     position: relative;
+
+
+    @include common.mediaquery('desktop') {
+        border-radius: var(--radius-medium);
+
+    }
 }
 
 .heading {
     text-align: center;
+    padding-bottom: 1rem;
+
+    @include common.mediaquery('desktop') {
+        padding: 0;
+    }
 }
 
 .list {
@@ -19,17 +30,22 @@
     list-style: none;
     min-height: 10rem;
     max-height: 20rem;
-    overflow-y: visible;
-    padding-top: 2rem;
-    gap: 1rem;
+    overflow-y: auto;
+    padding-top: 1rem;
+
+    @include common.mediaquery('desktop') {
+        margin-top: 1rem;
+        padding: 2rem 0;
+        gap: 0.5rem;
+    }
 }
 
 .placeholder {
-    margin: 0 2rem;
-    background-size: --placeholder-bg-size;
+    margin: 0.5rem 1.5rem;
+    background-size: var(--placeholder-bg-size);
     background-image: var(--gradient);
     animation: var(--placeholder-animation);
-    height: 2.5rem;
+    min-height: 2.5rem;
     border-radius: var(--radius-small);
 }
 
@@ -38,15 +54,22 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    gap: 2rem;
     transition: transform var(--transition);
-    padding: 0 2rem;
+    margin: 0.25rem 1rem;
 }
 
 .itemLink {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    padding: 1rem 1rem;
+    gap: 1rem;
     flex-grow: 1;
+    border-radius: var(--radius-medium);
+
+    &:hover {
+        background-color: var(--bg-secondary);
+    }
 }
 
 .username {
