refactor: list maps

--- a/components/pages/account/account.module.scss
+++ b/components/pages/account/account.module.scss
@@ -5,6 +5,10 @@
   margin-inline: auto;
   margin-top: 1rem;
   padding-bottom: 4rem;
+
+  @include common.mediaquery('desktop') {
+    margin-left: 12rem;
+  }
 }
 
 .accountMobile {
