refactor: general code quality

--- a/components/atoms/buttons/signInButton/signInButton.module.scss
+++ b/components/atoms/buttons/signInButton/signInButton.module.scss
@@ -7,7 +7,6 @@
   color: rgb(255, 255, 255);
   font-weight: 600;
   border: none;
-  transition: box-shadow var(--transition);
   text-align: center;
   display: flex;
   justify-content: center;
@@ -16,6 +15,8 @@
   gap: 0.5rem;
   font-size: 1rem;
   margin-left: 1.5rem;
+  transition: all var(--transition);
+  transition-property: transform, box-shadow;
 
   &::first-letter {
     text-transform: uppercase;
@@ -23,6 +24,11 @@
 
   &:focus {
     outline: none;
+  }
+
+  &:hover,
+  &:focus {
+    transform: scale(1.05);
     box-shadow: var(--shadow-focus)
   }
 
