--- a/components/atoms/accountPost/accountPost.module.scss
+++ b/components/atoms/accountPost/accountPost.module.scss
@@ -2,18 +2,29 @@
 
 .container {
   position: relative;
-  border: var(--border-gray);
   border-radius: var(--radius-small);
-  box-shadow: var(--shadow-secondary);
+  box-shadow: var(--shadow-post);
   overflow: hidden;
   aspect-ratio: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: box-shadow var(--transition);
+
+  --shadow-size: 3px;
+  box-shadow: 0 0 0 var(--shadow-size) var(--bg-primary), 0 0 0 calc(var(--shadow-size) * 2) var(--bg-secondary);
 
   &:focus {
     outline: none;
+  }
+
+  &:focus,
+  &:hover {
     box-shadow: var(--shadow-focus);
+  }
+
+  @include common.mediaquery('desktop') {
+    --shadow-size: 5px;
   }
 }
 
@@ -23,8 +34,6 @@
   background-color: var(--bg-primary);
   object-fit: contain;
 }
-
-
 
 .overlay {
   position: absolute;
@@ -38,9 +47,9 @@
   align-items: center;
   list-style: none;
   gap: 0.75rem;
-  background-color: rgb(35, 35, 35, 0.55);
+  background-color: rgb(35, 35, 35, 0.5);
   color: rgb(255, 255, 255);
-  font-weight: 600;
+  font-weight: 700;
   opacity: 0;
 
   transition: opacity var(--transition);
@@ -55,7 +64,7 @@
 
   @include common.mediaquery('desktop') {
     gap: 2rem;
-    --text-size: 3.5rem;
+    --text-size: 3rem;
   }
 }
 
