--- a/components/atoms/buttons/button/button.module.scss
+++ b/components/atoms/buttons/button/button.module.scss
@@ -13,19 +13,26 @@
   align-items: center;
   gap: 0.5rem;
   text-transform: capitalize;
+  transition: all var(--transition);
+  transition-property: transform, box-shadow;
 
-  &:hover,
-  &:focus {
-    box-shadow: var(--shadow-focus);
+
+  &:not(:disabled) {
+
+    &:hover,
+    &:focus {
+      box-shadow: var(--shadow-focus);
+      transform: scale(1.05);
+    }
   }
 
   &:focus {
     outline: none;
-    box-shadow: var(--shadow-focus);
   }
 
 
   &:disabled {
+    cursor: not-allowed;
     opacity: 0.5;
   }
 
@@ -41,10 +48,16 @@
   color: var(--color-primary);
   box-shadow: inset 0 0 0 2px var(--color-primary);
 
-  &:focus,
-  &:hover {
-    box-shadow: inset 0 0 0 2px var(--color-primary), var(--shadow-focus);
+
+  &:not(:disabled) {
+
+    &:focus,
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: inset 0 0 0 2px var(--color-primary), var(--shadow-focus);
+    }
   }
+
 
   &:disabled {
     background-color: transparent;
