--- a/components/molecules/comment/comment.module.scss
+++ b/components/molecules/comment/comment.module.scss
@@ -4,9 +4,9 @@
   display: grid;
   grid-template-columns: 2.5rem 1fr;
   grid-template-rows: 1fr auto;
-  padding: 1rem 0;
   row-gap: 1rem;
   column-gap: 0.25rem;
+  padding: 0.2rem 0;
   place-content: center;
   border-bottom: var(--border-primary);
 
@@ -17,8 +17,9 @@
   }
 
   @include common.mediaquery('desktop') {
-    column-gap: 1rem;
-    row-gap: 1rem;
+    column-gap: 0.75rem;
+    row-gap: 0.5rem;
+    padding-right: 1.5rem;
   }
 
   @include common.mobile-landscape {
@@ -35,9 +36,11 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  grid-column: 1 / 1;
+  align-self: flex-start;
 
   @include common.mediaquery('desktop') {
-    margin-left: 0.5rem;
+    margin-left: 0.1rem;
   }
 }
 
@@ -48,7 +51,6 @@
 
 .author {
   font-weight: 600;
-  display: inline;
   font-size: 1rem;
   flex-shrink: 0;
   max-width: 7rem;
@@ -66,13 +68,8 @@
   word-break: break-all;
   display: flex;
   align-items: flex-start;
-}
-
-.createdAt {
-  margin-left: 0.5rem;
-  border: none;
-  background-color: transparent;
-  font-size: 1rem;
+  width: fit-content;
+  padding-top: 0.3rem;
 }
 
 .info {
@@ -80,20 +77,30 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  padding-right: 0.5rem;
+
+  @include common.mediaquery('desktop') {
+    grid-column: 2/ 3;
+    gap: 1rem;
+    font-size: 0.8rem;
+  }
+}
+
+.createdAt {
+  border: none;
+  background-color: transparent;
 }
 
 .likeBtn {
   @extend .createdAt;
   display: flex;
-  gap: 0.4rem;
+  gap: 0.2rem;
   border: none;
   background-color: transparent;
   align-items: center;
 
   >svg {
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 1rem;
+    height: 1rem;
   }
 }
 
