--- a/components/organisms/accountPosts/accountPosts.module.scss
+++ b/components/organisms/accountPosts/accountPosts.module.scss
@@ -3,9 +3,9 @@
 .posts {
   display: grid;
   place-content: center;
-  margin-top: 1rem;
-  gap: 0.5rem;
-  padding: 0 1rem;
+  margin-top: 3rem;
+  gap: 1.5rem;
+  padding: 0 1.5rem;
   grid-template-columns: repeat(2, 1fr);
 
   @include common.mobile-landscape {
@@ -22,8 +22,8 @@
 
   @include common.mediaquery('desktop') {
     gap: 3rem;
-    padding: 0 3rem;
-    margin-top: 5rem;
+    padding: 0;
+    margin-top: 7rem;
     grid-template-columns: repeat(3, 1fr);
   }
 }
