fix: sign up bugs

--- a/components/atoms/input/input.module.scss
+++ b/components/atoms/input/input.module.scss
@@ -24,7 +24,7 @@
   border: var(--border-gray);
   border-radius: var(--radius-medium);
   transition: all var(--transition);
-  transition-property: background-color, box-shadow;
+  transition-property: background-color, box-shadow, border-color;
 
   &:hover {
     background-color: var(--bg-secondary);
