--- a/components/organisms/chatUsersList/chatUsersList.module.scss
+++ b/components/organisms/chatUsersList/chatUsersList.module.scss
@@ -1,7 +1,7 @@
 @use '/styles/common';
 
 .list {
-    list-style: none;
+    list-style-type: none;
     display: flex;
     flex-direction: column;
     gap: 1rem;
