--- a/components/molecules/comment/comment.module.scss
+++ b/components/molecules/comment/comment.module.scss
@@ -2,7 +2,7 @@
 
 .comment {
   display: grid;
-  grid-template-columns: 2.5rem 1fr;
+  grid-template-columns: max-content 1fr;
   grid-template-rows: 1fr auto;
   row-gap: 1rem;
   column-gap: 0.25rem;
@@ -23,7 +23,7 @@
   }
 
   @include common.mobile-landscape {
-    grid-template-columns: 3rem 1fr;
+    grid-template-columns: 2.5rem 1fr;
   }
 }
 
@@ -77,6 +77,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  font-size: 0.8rem;
 
   @include common.mediaquery('desktop') {
     grid-column: 2/ 3;
