--- a/components/organisms/chatUsersList/chatUsersList.module.scss
+++ b/components/organisms/chatUsersList/chatUsersList.module.scss
@@ -1,10 +1,22 @@
 @use '/styles/common';
 
+.nav {
+    width: 100%;
+
+    @include common.mediaquery('desktop') {
+        width: auto;
+    }
+}
+
 .list {
     list-style-type: none;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    @include common.mediaquery('desktop') {
+        gap: 2rem;
+    }
 }
 
 .avatar {
@@ -25,7 +37,7 @@
     gap: 1rem;
     border-radius: var(--radius-medium);
     background-color: var(--bg-primary);
-    padding: 0.25rem 1rem;
+    padding: 0.5rem 1rem;
     width: 100%;
     transition: background-color var(--transition);
 
@@ -42,6 +54,7 @@
     @include common.mediaquery('desktop') {
         width: auto;
         gap: 1rem;
+        padding: 0.5rem;
     }
 }
 
