--- a/components/molecules/confirmationAlert/confirmationAlert.module.scss
+++ b/components/molecules/confirmationAlert/confirmationAlert.module.scss
@@ -4,10 +4,11 @@
   background-color: var(--bg-primary);
   border-radius: var(--radius-medium);
   position: relative;
-  padding: 1.25rem 2rem;
+  padding: 2rem 3rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  width: 85%;
 
   @include common.mediaquery('tablet') {
     width: 60%;
@@ -15,8 +16,8 @@
 
   @include common.mediaquery('desktop') {
     width: auto;
-    gap: 3rem;
-    padding: 1.5rem 3rem;
+    gap: 2.5rem;
+    padding: 1.5rem 5rem;
   }
 }
 
