--- a/components/molecules/dropZone/dropZone.module.scss
+++ b/components/molecules/dropZone/dropZone.module.scss
@@ -60,6 +60,7 @@
   transition-property: background-color, box-shadow, transform;
   z-index: 1;
   pointer-events: all;
+  border: 2px solid var(--color-primary);
   padding: 0.5rem 1rem;
 
   &::first-letter {
@@ -68,6 +69,8 @@
 
   &:hover {
     cursor: pointer;
+    background-color: var(--bg-secondary);
+    box-shadow: var(--shadow-focus);
     transform: scale(1.05);
   }
 }
