--- a/components/atoms/editAccountHeading/editAccountHeading.module.scss
+++ b/components/atoms/editAccountHeading/editAccountHeading.module.scss
@@ -2,10 +2,10 @@
 
 .heading {
     font-size: 2rem;
-    padding-bottom: 2rem;
+    padding-bottom: 1.25rem;
     text-align: center;
 
     @include common.mediaquery('desktop') {
-        text-align: left;
+        font-size: 3rem;
     }
 }
