--- a/components/organisms/editAccountStages/stages.module.scss
+++ b/components/organisms/editAccountStages/stages.module.scss
@@ -3,6 +3,8 @@
 .form {
     display: grid;
     gap: 2rem;
+
+    margin-top: 3rem;
 }
 
 .preview {
@@ -43,10 +45,15 @@
     gap: 2rem;
 
     @include common.mediaquery('desktop') {
-        grid-template-rows: 1fr;
         width: 100%;
-        gap: 3rem;
-        grid-template-columns: repeat(3, 1fr);
+        gap: 4rem;
+        font-size: 1.25rem;
+        display: flex;
+        justify-content: center;
+
+        >button {
+            padding: 0.5em 1em;
+        }
     }
 }
 
@@ -68,8 +75,8 @@
     @include common.mediaquery('desktop') {
         gap: 4rem;
         margin-top: 0;
-        grid-template-rows: 1fr;
-        grid-template-columns: repeat(3, 1fr);
+        display: flex;
+        justify-content: space-between;
     }
 }
 
