--- a/components/pages/home/home.module.scss
+++ b/components/pages/home/home.module.scss
@@ -18,6 +18,7 @@
   margin-top: 2rem;
   margin-bottom: 4rem;
   min-height: 100%;
+  list-style: none;
 
   @include common.mediaquery('desktop') {
     grid-auto-columns: auto;
