--- a/components/molecules/comment/comment.module.scss
+++ b/components/molecules/comment/comment.module.scss
@@ -5,8 +5,8 @@
   grid-template-columns: max-content 1fr;
   grid-template-rows: 1fr auto;
   row-gap: 1rem;
-  column-gap: 0.25rem;
-  padding: 0.2rem 0;
+  column-gap: 0.5rem;
+  padding: 0.25rem;
   place-content: center;
   border-bottom: var(--border-primary);
 
