--- a/components/atoms/buttons/signInButton/signInButton.module.scss
+++ b/components/atoms/buttons/signInButton/signInButton.module.scss
@@ -4,7 +4,7 @@
   border-radius: var(--radius-small);
   padding: 0.4rem 0.8rem;
   background-color: var(--color-primary);
-  color: rgb(255, 255, 255);
+  color: var(--color-white);
   font-weight: 700;
   border: none;
   text-align: center;
