--- a/components/atoms/newPostNotification/newPostNotification.module.scss
+++ b/components/atoms/newPostNotification/newPostNotification.module.scss
@@ -12,7 +12,7 @@
   border: none;
   box-shadow: var(--shadow-secondary);
   background-color: var(--color-primary);
-  color: rgb(255, 255, 255);
+  color: var(--color-white);
   padding: 0.5rem 0.7rem;
   font-size: 1.25rem;
   display: flex;
