--- a/components/molecules/dropZone/dropZone.module.scss
+++ b/components/molecules/dropZone/dropZone.module.scss
@@ -54,7 +54,7 @@
 .buttonInput {
   border-radius: var(--radius-small);
   background-color: var(--color-primary);
-  color: rgb(255, 255, 255);
+  color: var(--color-white);
   font-weight: 500;
   border: none;
   transition: all var(--transition);
