--- a/components/molecules/post/postSlider/postSlider.module.scss
+++ b/components/molecules/post/postSlider/postSlider.module.scss
@@ -47,7 +47,7 @@
 
   border: none;
   background-color: var(--color-primary);
-  color: rgb(255, 255, 255);
+  color: var(--color-white);
   border-radius: 100%;
   display: flex;
   justify-content: center;
