--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,6 +7,9 @@
   --color-disabled: rgb(63, 114, 175, 0.9);
   --color-gray: rgb(225, 225, 225);
   --color-overlay: rgb(20, 20, 20, 0.6);
+  --color-white: rgb(255, 255, 255);
+  --color-gray-transparent: rgb(30, 30, 30, 0.5);
+  --color-icon-gray: rgb(20, 20, 20);
 
   --text-black: rgb(0, 0, 0);
   --text-gray: rgb(61, 61, 61);
