--- a/components/atoms/buttons/button/button.module.scss
+++ b/components/atoms/buttons/button/button.module.scss
@@ -3,7 +3,7 @@
 .button {
   border-radius: var(--radius-small);
   background-color: var(--color-primary);
-  color: rgb(255, 255, 255);
+  color: var(--color-white);
   font-weight: 700;
   border: none;
   padding: 0.5rem 0.8rem;
