--- a/components/atoms/chatMessage/chatMessage.module.scss
+++ b/components/atoms/chatMessage/chatMessage.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     margin-left: auto;
-    color: rgb(30, 30, 30);
+    color: var(--color-icon-gray);
     position: relative;
     word-break: break-all;
 
