--- a/components/molecules/modal/modal.module.scss
+++ b/components/molecules/modal/modal.module.scss
@@ -42,7 +42,7 @@
   &:hover,
   &:focus {
     box-shadow: var(--shadow-focus);
-    color: rgb(255, 255, 255);
+    color: var(--color-white);
     background-color: var(--color-primary);
   }
 
