refactor: remove className props

--- a/components/atoms/buttons/button/button.module.scss
+++ b/components/atoms/buttons/button/button.module.scss
@@ -42,7 +42,7 @@
   }
 }
 
-.button-secondary {
+.secondary {
   @extend .button;
   background-color: var(--bg-primary);
   color: var(--color-primary);
