--- a/components/atoms/avatar/avatar.module.scss
+++ b/components/atoms/avatar/avatar.module.scss
@@ -4,7 +4,7 @@
   width: 2rem;
   height: 2rem;
   border-radius: 100%;
-  box-shadow: 0 0 0 1px var(--color-gray);
+  border: 3px solid var(--color-gray);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,6 +18,20 @@
   }
 }
 
+.small {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.medium {
+  width: 4.5rem;
+  height: 4.5rem;
+}
+
+.big {
+  width: 9rem;
+  height: 9rem;
+}
 
 .noImage {
   width: 100%;
@@ -27,7 +41,7 @@
   align-items: center;
 
   &>svg {
-    width: 90%;
+    width: 100%;
     height: 90%;
   }
 }
