--- a/components/molecules/aspectRatioButtons/aspectRatioButtons.module.scss
+++ b/components/molecules/aspectRatioButtons/aspectRatioButtons.module.scss
@@ -13,30 +13,16 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 3rem;
   }
-}
 
-.button {
-  width: 100%;
-  text-transform: capitalize;
+  >button {
+    width: 100%;
 
-  @include common.mediaquery('desktop') {
-    font-size: 1.25rem;
-    padding: 0.75rem 0;
-  }
-}
-
-.container {
-  display: flex;
-  justify-content: stretch;
-  align-items: center;
-
-  &:last-child {
-    grid-column: 1 / 3;
-  }
-
-  @include common.mediaquery('desktop') {
     &:last-child {
-      grid-column: auto;
+      grid-column: 1 / 3;
+
+      @include common.mediaquery('desktop') {
+        grid-column: auto;
+      }
     }
   }
 }
