--- a/components/molecules/cropImage/cropImage.module.scss
+++ b/components/molecules/cropImage/cropImage.module.scss
@@ -31,24 +31,17 @@
   }
 }
 
-.button {
-  width: 100%;
-
-  @include common.mediaquery('desktop') {
-    font-size: 1.25rem;
-    padding: 0.75rem 0;
-  }
-}
-
 
 .buttons {
   display: flex;
   flex-direction: column;
-  margin-top: 2rem;
+  margin-top: 1rem;
   gap: 1rem;
 
   @include common.mediaquery('desktop') {
     gap: 5rem;
-    flex-direction: row;
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
