--- a/components/molecules/post/postSlider/postSlider.module.scss
+++ b/components/molecules/post/postSlider/postSlider.module.scss
@@ -11,24 +11,17 @@
 }
 
 .slider {
-  display: flex;
   align-items: center;
-  min-height: 13rem;
   position: relative;
   overflow: hidden;
   border-radius: var(--radius-medium);
-
-  @include common.mobile-landscape {
-    min-height: 15rem;
-  }
-
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
 
   @include common.mediaquery('tablet') {
     border-radius: 0;
-  }
-
-  @include common.mediaquery('desktop') {
-    min-height: 20rem;
   }
 }
 
@@ -44,7 +37,6 @@
   height: var(--button-width);
   position: absolute;
   margin: auto 0;
-
   border: none;
   background-color: var(--color-primary);
   color: var(--color-white);
@@ -57,7 +49,6 @@
   left: 1rem;
   z-index: 2;
   box-shadow: var(--shadow-primary);
-
   transition: box-shadow var(--transition-fast);
 
   &:hover,
@@ -78,7 +69,7 @@
 
 .postSliderProgress {
   position: absolute;
-  bottom: 0.5rem;
+  bottom: 0.75rem;
   display: flex;
   align-items: center;
   width: fit-content;
