--- a/src/components/organisms/signInForm/signInForm.module.scss
+++ b/src/components/organisms/signInForm/signInForm.module.scss
@@ -18,3 +18,14 @@
     font-weight: 700;
     font-size: 1.25rem;
 }
+
+.continueButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    >button {
+        flex-grow: 1;
+        padding: 0.8rem 0;
+    }
+}
