--- a/src/components/molecules/otherSignInOptions/otherSignInOptions.module.scss
+++ b/src/components/molecules/otherSignInOptions/otherSignInOptions.module.scss
@@ -32,8 +32,6 @@
     gap: 2.5rem;
 }
 
-
-
 .other {
     display: flex;
     justify-content: center;
@@ -43,23 +41,16 @@
 
     @include common.mediaquery('desktop') {
         flex-direction: row;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
-.otherButton {
-    display: flex;
-    align-items: center;
-    padding: 0.75rem 0;
-    flex-grow: 1;
-
-    >svg {
-        stroke-width: 3;
-        width: 1.5rem;
-        height: 1.5rem;
+.button {
+    >button {
+        display: flex;
+        gap: 1rem;
+        width: 100%;
+        padding: 0.8rem;
     }
-}
-
-.otherButtonText {
-    font-weight: 700;
-    margin-left: 0.5rem;
 }
