--- a/src/components/organisms/navbar/navbar.module.scss
+++ b/src/components/organisms/navbar/navbar.module.scss
@@ -5,8 +5,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.2rem 0;
-  background-color: var(--bg-blur);
+  padding: 0.5rem 0;
+  background-color: var(--bg-primary);
   backdrop-filter: var(--filter-blur);
   position: fixed;
   bottom: 0;
