refactor: post by id page

--- a/src/components/molecules/aspectRatioButtons/aspectRatioButtons.module.scss
+++ b/src/components/molecules/aspectRatioButtons/aspectRatioButtons.module.scss
@@ -1,5 +1,9 @@
 @use '/src/styles/common';
 
+.container {
+  margin-top: 1.5rem;
+}
+
 .aspectRatioButtons {
   display: grid;
   column-gap: 2rem;
