--- a/src/components/organisms/statsModal/statsModal.module.scss
+++ b/src/components/organisms/statsModal/statsModal.module.scss
@@ -3,7 +3,7 @@
 .container {
   background-color: var(--bg-primary);
   padding: 1rem 0;
-  width: clamp(25rem, 30%, 30rem);
+  width: clamp(25rem, 35vw, 32rem);
   border-radius: var(--radius-big) var(--radius-big) 0 0;
   position: relative;
 
