chore: remove rotue loading

--- a/src/components/organisms/homePost/HomePost.module.scss
+++ b/src/components/organisms/homePost/HomePost.module.scss
@@ -5,6 +5,6 @@
 
   @include common.mediaquery('tablet') {
     border: var(--border-gray);
-    border-radius: var(--radius-medium);
+    border-radius: var(--radius-big);
   }
 }
