--- a/src/components/organisms/header/Header.module.scss
+++ b/src/components/organisms/header/Header.module.scss
@@ -47,6 +47,11 @@
   &:focus {
     background-color: var(--bg-secondary);
   }
+
+  &:focus {
+    outline: none;
+    box-shadow: var(--shadow-focus);
+  }
 }
 
 .userInfo {
