feat: cold start message

--- a/src/components/molecules/loader/Loader.module.scss
+++ b/src/components/molecules/loader/Loader.module.scss
@@ -47,3 +47,11 @@
 .blue {
   color: var(--color-primary);
 }
+
+.marginTop {
+  margin-top: 4rem;
+
+  @include common.mediaquery('desktop') {
+    margin-top: 8rem;
+  }
+}
